deploy/k8s/crawler-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atri-university-crawler
  labels:
    monitoring-gateway-access: "true"
